Preliminary pairing implementation.

--- a/libdevcrypto/CMakeLists.txt
+++ b/libdevcrypto/CMakeLists.txt
@@ -12,6 +12,9 @@ target_include_directories(devcrypto PRIVATE ..)
 target_include_directories(devcrypto PRIVATE ../utils)
 target_link_libraries(devcrypto cryptopp ${Utils_SCRYPT_LIBRARIES} devcore)
 
+target_include_directories(devcrypto PRIVATE /usr/local/include/libsnark)
+target_link_libraries(devcrypto /usr/local/lib/libsnark.so)
+
 if (NOT EMSCRIPTEN)
 	target_link_libraries(devcrypto ${Utils_SECP256K1_LIBRARIES})
 endif ()
