Build libsnark as cmake dependency.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,7 @@ include(deps/boost.cmake)
 include(deps/jsoncpp.cmake)
 include(deps/jsonrpc.cmake)
 include(deps/cryptopp.cmake)
+include(deps/snark.cmake)
 
 configure_project(CPUID CURL EVMJIT FATDB MINIUPNPC ROCKSDB PARANOID TESTS VMTRACE)
 
